# find-my-ncs

./: .gitignore  CMakeLists.txt  Kconfig.fmn  README.md  README.rst  index.rst  west.yml
.github/workflows/: build_and_public_docs.yml
applications/thingy/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
applications/thingy/boards/: thingy52_nrf52832.conf  thingy52_nrf52832.overlay  thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay  thingy53_nrf5340_cpuapp_common.overlay  thingy53_nrf5340_cpuapp_ns.conf
applications/thingy/child_image/: mcuboot.conf  mcuboot_thingy53_nrf5340_cpuapp.conf  mcuboot_thingy53_nrf5340_cpuapp.overlay
applications/thingy/src/: battery.c  main.c  motion.c  speaker.c
applications/thingy/src/platform/: motion_int.c  motion_poll.c  speaker_pin_ctrl.c
apps/fmn/: pm_static.yml  prj.conf
apps/fmn/src/: main.c
apps/simple/: prj.conf
apps/simple/configuration/: app_ZDebug.conf  app_ZRelease.conf
apps/simple/src/: main.c
ci/: Jenkinsfile
cmake/app/: boilerplate_setup.cmake  mcuboot_validation.cmake
doc/: .gitignore  app_dev.rst  generate_doc.py  ncs_install.rst  overview.rst  release_notes.rst  samples.rst
doc/app_dev/: find_my_coexistence.rst  find_my_pairing.rst  find_my_uarp.rst
doc/releases/: release-notes-1.6.0.rst  release-notes-1.7.0.rst  release-notes-1.8.0.rst  release-notes-1.9.0.rst  release-notes-2.0.0.rst  release-notes-2.1.0.rst  release-notes-2.2.0.rst  release-notes-2.3.0.rst  release-notes-2.4.0.rst  release-notes-2.4.1.rst  release-notes-latest.rst  release-notes-latest.rst.tmpl
include/: fmna.h
samples/coexistence/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/coexistence/child_image/: hci_rpmsg.conf
samples/coexistence/src/: main.c
samples/common/cmake/: boilerplate_setup.cmake  mcuboot_validation.cmake
samples/common/configuration/: app_ZDebug.conf  app_ZRelease.conf  mcuboot_ZDebug.conf  mcuboot_ZRelease.conf  mcuboot_ZRelease_nrf52840dk_nrf52840.conf  mcuboot_ZRelease_nrf5340dk_nrf5340_cpuapp_ns.conf
samples/qualification/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/qualification/child_image/: hci_rpmsg.conf
samples/simple/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/simple/configuration/: app_ZDebug.conf  mcuboot_ZDebug.conf  mcuboot_ZRelease.conf
samples/simple/src/: main.c
src/: CMakeLists.txt  Kconfig  fmna.c  fmna_adv.c  fmna_adv.h  fmna_battery.c  fmna_battery.h  fmna_conn.c  fmna_conn.h  fmna_gatt_ais.c  fmna_gatt_fmns.c  fmna_gatt_fmns.h  fmna_gatt_pkt_manager.c  fmna_gatt_pkt_manager.h  fmna_keys.c  fmna_keys.h  fmna_motion_detection.c  fmna_nfc.c  fmna_nfc.h  fmna_pair.c  fmna_pair.h  fmna_product_plan.c  fmna_product_plan.h  fmna_serial_number.c  fmna_serial_number.h  fmna_sound.c  fmna_sound.h  fmna_state.c  fmna_state.h  fmna_storage.c  fmna_storage.h  fmna_version.c  fmna_version.h
src/crypto/: CMakeLists.txt  crypto_helper.c  crypto_helper.h  crypto_log.h  fm_crypto.h  fm_crypto_oberon.c  fm_crypto_platform.h
src/events/: CMakeLists.txt  fmna_config_event.c  fmna_config_event.h  fmna_debug_event.c  fmna_debug_event.h  fmna_event.c  fmna_event.h  fmna_non_owner_event.c  fmna_non_owner_event.h  fmna_owner_event.c  fmna_owner_event.h  fmna_pair_event.c  fmna_pair_event.h
src/uarp/: CMakeLists.txt  Kconfig  fmna_uarp.c  fmna_uarp.h  fmna_uarp_service.c
src/uarp/UARPDK/: CMakeLists.txt  CoreUARPPlatform.h  CoreUARPPlatformNRF5.c  CoreUARPPlatformNRF5.h  CoreUARPPlatformZephyr.c  CoreUARPPlatformZephyr.h
tests/crypto/: CMakeLists.txt  prj.conf
tests/crypto/src/: main.c  test_collab.c  test_decrypt.c  test_ecdsa.c  test_ecies.c  test_keyroll.c  test_ssecret.c
tests/uarp_update/: __main__.py
tests/uarp_update/src/: ble_uarp.py  super_binary.py  test.py  uarp.py
tools/: README.md  README.rst  setup.py
tools/doc/: Extract.md  Provision.md  README.md  SuperBinary.md  extract.rst  provision.rst  super-binary.rst
tools/ncsfmntools/: __main__.py  __package_info__.py  cli.py
tools/ncsfmntools/scripts/: cli.py  cmd_extract.py  cmd_provision.py  cmd_superbinary.py  device.py  settings_nvs_utils.py
tools/samples/SuperBinary/ReleaseNotes/: de-DE.txt  en-US.txt  pl-PL.txt
tools/samples/SuperBinary/github_action/: trigger_action.py
tools/samples/SuperBinary/incremental/: README.md  SuperBinary.plist  build.bat  build.sh
tools/samples/SuperBinary/single/: README.md  SuperBinary.plist  build.bat  build.sh
zephyr/: module.yml
